
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-mix-modeling-workbench"
version = "0.1.0"
description = "Explore channel contribution, lag, saturation, and scenario planning for budget allocation."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
